welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: '(' expected but identifier found.
  if getDirection()==Direction.EAST{
     ^DwarfCode:27: error: illegal start of simple expression
}
^